--- a/css/styles.css
+++ b/css/styles.css
@@ -11339,7 +11339,7 @@ p.lead {
   margin-right: 0;
 }
 .social-icons .social-icons-facebook:hover {
-  background-color: #000000;
+  background-color: #0f91f3;
 }
 
 .dev-icons {
